--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0"
   }
 }
